# dockevo

./: MANIFEST.in  Makefile  PLUGIN_SYSTEM.md  README.md  container-os.py  pyproject.toml  rename_package.sh  requirements.txt  run.py  run.sh  setup.cfg  setup.py  setup.sh
container_os/: __init__.py  __main__.py
dockevos/: __init__.py  __main__.py
plugins/: PLUGIN_GENERATOR.md  __init__.py  advanced_plugin.py  plugin_generator.py  plugin_manager.py  plugin_manager_core.py  sample_plugin.py  setup.py  system_info_plugin.py
plugins/alternative_plugin/: README.md  __init__.py
plugins/docker_manager/: __init__.py
plugins/error_handler/: __init__.py
plugins/hardware_analyzer/: __init__.py
plugins/plugin_generator/: __init__.py  templates.py
plugins/plugin_manager/: README.md  __init__.py
plugins/shell_assistant/: README.md  __init__.py
plugins/system_log/: README.md  __init__.py
tests/: test_smoke.py
